docs: close out phase 3 (steps 09-12) in remediation plan and baseline